--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: EV
+  site: 'https://punyahbportfolio-punyahb.vercel.app/'
   base: '/'
   trailingSlash: false
 
@@ -9,14 +9,14 @@ site:
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: EV
+    template: '%s — EV'
+  description: "\U0001F680 Why you should switch to electric vehicles and why it is the future?"
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: EV
     images:
       - url: '~/assets/images/default.png'
         width: 1200
